[package]
name = "grand_bazaar"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "grand_bazaar"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0" }
solana-program = "=1.18.2"
mpl-bubblegum = "1.2.0"
mpl-token-metadata = "4.1.1"
